Recommend to upgrade. NOTE: update dashboard view

--- a/dashboard_module/src/main/res/layout/fragment_new_dashboard_rank.xml
+++ b/dashboard_module/src/main/res/layout/fragment_new_dashboard_rank.xml
@@ -16,6 +16,7 @@
         android:paddingEnd="8dp">
 
         <ImageView
+            android:id="@+id/coinsImg"
             android:layout_width="25dp"
             android:layout_height="wrap_content"
             android:scaleType="fitCenter"
