--- a/dashboard_module/src/main/res/layout/layout_dashboard_drive_coins.xml
+++ b/dashboard_module/src/main/res/layout/layout_dashboard_drive_coins.xml
@@ -22,6 +22,8 @@
         android:layout_height="40dp"
         android:layout_marginStart="24dp"
         android:layout_marginTop="48dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:background="@drawable/ic_dot_green"
         android:paddingHorizontal="4dp"
         android:paddingBottom="4dp"
@@ -104,6 +106,7 @@
         android:text="@string/learn_more"
         android:textColor="#AAAAAA"
         android:textSize="16sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
